tests/fixtures/invalid/InvalidUseStatementOrderingConstImports.php
<?php

declare(strict_types=1);

namespace App\Fixtures\UseOrderingConstsInvalid;

use const Vendor\Cnst\Z_LAST;
use const Vendor\Cnst\A_FIRST;

/**
 * Negative: constant use imports are not sorted alphabetically.
 */
final class InvalidUseStatementOrderingConstImports
{
}
